--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.headerlist-item.active {
+  border: 1px solid white;
+  padding: 10px;
+  border-radius: 20px;
+}
