--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,17 @@
   padding: 10px;
   border-radius: 20px;
 }
+
+.headerContainer {
+  width: 100%;
+  max-width: 1024px;
+  margin: 20px 0px 100px 0px;
+}
+
+.headerContainer.listMode {
+  margin: 20px 0px 0px 0px;
+}
+
+/* .optionCounterButton:disabled {
+  cursor: not-allowed;
+} */
