home page completed

--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,9 @@
 /* .optionCounterButton:disabled {
   cursor: not-allowed;
 } */
+
+.fListItem {
+  margin-bottom: 10px;
+  color: #003580;
+  cursor: pointer;
+}
